fix(details): fixed storybook alignment (#1627)

--- a/.storybook/custom-styles.less
+++ b/.storybook/custom-styles.less
@@ -1,4 +1,3 @@
-
 #root {
     display: flex;
     width: 100%;
@@ -10,6 +9,7 @@ A couple of modules need to have a fixed with otherwise they will not work well
 */
 #root > .breadcrumbs,
 #root > .carousel,
+#root > .details,
 #root > .stepper {
     width: 100%;
 }
